Corrected an issue with the maven svn plugin usage. refs #2339

--- a/arbil/src/main/resources/version.properties
+++ b/arbil/src/main/resources/version.properties
@@ -2,7 +2,7 @@ application.title=${arbil.application-title}
 application.iconName=/nl/mpi/arbil/resources/icons/arbil-${arbil.branch}128x128.png
 application.majorVersion=${arbil.majorVersion}
 application.minorVersion=${arbil.minorVersion}
-application.revision=${arbil.version.revision}
+application.revision=${arbil.version.committedRevision}
 application.lastCommitDate=${arbil.version.committedDate}
 application.compileDate=${arbil.build-date}
 application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-${arbil.branch}-current.txt
