--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -33,6 +33,10 @@
 	<resources>
 	    <resource>
 		<directory>src/main/resources</directory>
+		<filtering>false</filtering>
+	    </resource>
+	    <resource>
+		<directory>src/main/resources</directory>
 		<filtering>true</filtering>
 		<includes>
 		    <include>**/version.properties</include>
