--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 	    <artifactId>corpusstructure-api</artifactId>
 	    <version>1.7.3</version>
 	</dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>arbil-help</artifactId>
+	    <!-- TODO: Depend on some stable version -->
+            <version>2.5-pretesting-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <repositories>
 	<repository>
