added distribution management section to arbil-help pom

--- a/arbil-help/pom.xml
+++ b/arbil-help/pom.xml
@@ -191,4 +191,15 @@
 	</repository>
     </repositories>
     
+    <distributionManagement>
+	<snapshotRepository>
+	    <id>MPI-Snapshots</id>
+	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI-Snapshots</url>
+	</snapshotRepository>
+	<repository>
+	    <id>MPI</id>
+	    <name>MPI Repository</name>
+	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI</url>
+	</repository>
+    </distributionManagement>
 </project>
