--- a/pom.xml
+++ b/pom.xml
@@ -139,8 +139,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>arbil-help</artifactId>
-	    <!-- TODO: Depend on some stable version -->
-            <version>2.5-pretesting-SNAPSHOT</version>
+	    <!-- TODO: Depend on a more stable version -->
+            <version>2.5.33408-pretesting</version>
         </dependency>
     </dependencies>
     <repositories>
