--- a/imgscalr-maven-plugin/pom.xml
+++ b/imgscalr-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>nl.mpi</groupId>
     <artifactId>imgscalr-maven-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>maven-plugin</packaging>
   
     <description>
@@ -76,4 +76,17 @@
 	    </plugin>
 	</plugins>
     </build>
+        
+    <distributionManagement>
+	<snapshotRepository>
+	    <id>MPI-Snapshots</id>
+	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI-Snapshots</url>
+	</snapshotRepository>
+	<repository>
+	    <id>MPI</id>
+	    <name>MPI Repository</name>
+	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI</url>
+	</repository>
+    </distributionManagement>
+    
 </project>
