--- a/arbil-help/pom.xml
+++ b/arbil-help/pom.xml
@@ -121,7 +121,7 @@
 				<include>arbil-cmdi/arbil-cmdi.html</include>
 			    </includes>
 			    <fileMappers>
-				Map arbil.html -> arbil.xml 
+				<!--Map arbil.html -> arbil.xml--> 
 				<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
 				    <targetExtension>.xml</targetExtension>
 				</fileMapper>
@@ -146,7 +146,7 @@
 	    <plugin>
 		<groupId>nl.mpi</groupId>
 		<artifactId>imgscalr-maven-plugin</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 		<executions>
 		    <execution>
 			<phase>generate-resources</phase>
