--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,9 @@
 	<dependency>
 	    <groupId>nl.mpi</groupId>
 	    <artifactId>typechecker</artifactId>
-	    <version>1.6.6</version>
+	    <version>1.7.0</version>
 	</dependency>
+	<!-- TODO: This can be removed for this version if we disable the shibboleth negotiator -->
 	<dependency>
 	    <groupId>nl.nikhef</groupId>
 	    <artifactId>slcshttps</artifactId>
