--- a/arbil-help/src/main/resources/nl/mpi/arbil/help/version.properties
+++ b/arbil-help/src/main/resources/nl/mpi/arbil/help/version.properties
@@ -1,5 +1,5 @@
-plugin.majorVersion=${arbil.help.majorVersion}
-plugin.minorVersion=${arbil.help.minorVersion}
+plugin.majorVersion=${arbil.majorVersion}
+plugin.minorVersion=${arbil.minorVersion}
 plugin.buildVersion=${plugin.version.committedRevision}
 plugin.lastCommitDate=${plugin.version.committedDate}
 plugin.compileDate=${plugin.build-date}
