--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -9,21 +9,16 @@
     <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
     <!--<version>${arbil.majorVersion}.${arbil.minorVersion}.33290-${arbil.branch}</version>-->
     <name>Arbil</name>
-    <organization> 
-	<name>The Language Archive</name> 
-	<url>http://tla.mpi.nl/tools/tla-tools</url>
-    </organization>
-    <scm>
-	<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
-	<url>https://trac.mpi.nl/wiki/Arbil</url>
-    </scm>
+    
+    <parent>
+	<groupId>nl.mpi</groupId>
+	<artifactId>arbil-parent</artifactId>
+	<version>1.0</version>
+    </parent>
     
     <properties>
-	<arbil.majorVersion>2</arbil.majorVersion>
-	<arbil.minorVersion>5</arbil.minorVersion>
-	<arbil.branch>pretesting</arbil.branch>
 	<arbil.application-title>Arbil (pretesting)</arbil.application-title>
-	
+
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<output.jarname>${project.build.finalName}</output.jarname>
 	<output.directory>${project.build.directory}</output.directory>
@@ -271,47 +266,7 @@
             <version>2.5-pretesting-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <repositories>
-	<repository>
-	    <id>MPI</id>
-	    <name>MPI LAT Repository</name>
-	    <url>https://lux15.mpi.nl/nexus/content/groups/public/</url>
-	</repository>
-    </repositories>
-    <reporting>
-	<plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-surefire-report-plugin</artifactId>
-		<version>2.7.2</version>
-		<configuration>
-		    <forkMode>never</forkMode>
-		    <argLine>-Dwt.headless</argLine>
-		    <argLine>-Djava.awt.headless=true</argLine>
-		</configuration>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jxr-plugin</artifactId>
-		<version>2.3</version>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-javadoc-plugin</artifactId>
-		<version>2.8.1</version>
-	    </plugin>
-	    <plugin>
-		<groupId>org.codehaus.mojo</groupId>
-		<artifactId>findbugs-maven-plugin</artifactId>
-		<version>2.5.1</version>
-		<configuration>
-		    <findbugsXmlOutput>True</findbugsXmlOutput>
-		    <threshold>Normal</threshold>
-		    <effort>Min</effort>
-		</configuration>
-	    </plugin>
-	</plugins>
-    </reporting>
+    
     <pluginRepositories>
 	<pluginRepository>
 	    <id>maven-timestamp</id>
