--- a/pom.xml
+++ b/pom.xml
@@ -1,64 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>nl.mpi</groupId>
-  <artifactId>arbil.parent</artifactId>
-  <name>arbil_parent</name>
-  <packaging>pom</packaging>
-  <version>1.0</version>
-  <description>Parent pom for Arbil</description>
-  <modules>
-    <module>imgscalr-maven-plugin</module>
-    <module>arbil</module>
-    <module>arbil-help</module>
-    <module>arbil-wicket</module>
-  </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>nl.mpi</groupId>
+    <artifactId>arbil-parent</artifactId>
+    <name>Arbil parent</name>
+    <packaging>pom</packaging>
+    <version>1.0</version>
+    <description>Parent pom for Arbil</description>
+    <modules>
+	<module>imgscalr-maven-plugin</module>
+	<module>arbil</module>
+	<module>arbil-help</module>
+	<module>arbil-wicket</module>
+    </modules>
 
-  <scm>
-     <developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/</developerConnection>
-      <url>https://trac.mpi.nl/wiki/Arbil</url>
- </scm>
+    <organization> 
+	<name>The Language Archive</name> 
+	<url>http://tla.mpi.nl/tools/tla-tools</url>
+    </organization>
+    
+    <scm>
+	<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/</developerConnection>
+	<url>https://trac.mpi.nl/wiki/Arbil</url>
+    </scm>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+	<arbil.majorVersion>2</arbil.majorVersion>
+	<arbil.minorVersion>5</arbil.minorVersion>
+	<arbil.branch>pretesting</arbil.branch>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.7.2</version>
-        <configuration>
-        	<forkMode>never</forkMode>
-            <argLine>-Dwt.headless</argLine>
-            <argLine>-Djava.awt.headless=true</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <configuration>
-          <findbugsXmlOutput>True</findbugsXmlOutput>
-          <threshold>Normal</threshold>
-          <effort>Min</effort>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>javancss-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </reporting>
+    <reporting>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-report-plugin</artifactId>
+		<version>2.7.2</version>
+		<configuration>
+		    <forkMode>never</forkMode>
+		    <argLine>-Dwt.headless</argLine>
+		    <argLine>-Djava.awt.headless=true</argLine>
+		</configuration>
+	    </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jxr-plugin</artifactId>
+		<version>2.3</version>
+	    </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>2.8.1</version>
+	    </plugin>
+	    <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>findbugs-maven-plugin</artifactId>
+		<version>2.5.1</version>
+		<configuration>
+		    <findbugsXmlOutput>True</findbugsXmlOutput>
+		    <threshold>Normal</threshold>
+		    <effort>Min</effort>
+		</configuration>
+	    </plugin>
+	</plugins>
+    </reporting>
+    
+    <repositories>
+	<repository>
+	    <id>MPI</id>
+	    <name>MPI LAT Repository</name>
+	    <url>https://lux15.mpi.nl/nexus/content/groups/public/</url>
+	</repository>
+    </repositories>
+    
+    <distributionManagement>
+	<snapshotRepository>
+	    <id>MPI-Snapshots</id>
+	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI-Snapshots</url>
+	</snapshotRepository>
+	<repository>
+	    <id>MPI</id>
+	    <name>MPI Repository</name>
+	    <url>https://lux15.mpi.nl/nexus/content/repositories/MPI</url>
+	</repository>
+    </distributionManagement>
 </project>
 
