--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.mpi</groupId>
     <artifactId>arbil</artifactId>
@@ -14,12 +14,44 @@
     </parent>
     
     <properties>
+	<arbil.application-title>Arbil (testing)</arbil.application-title>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<output.directory>${project.build.directory}</output.directory>
     </properties>
     
     <build>
+	<resources>
+	    <resource>
+		<directory>src/main/resources</directory>
+		<filtering>false</filtering>
+	    </resource>
+	    <resource>
+		<directory>src/main/resources</directory>
+		<filtering>true</filtering>
+		<includes>
+		    <include>**/version.properties</include>
+		</includes>
+	    </resource>
+	</resources>
 	<plugins>
+	    <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>properties-maven-plugin</artifactId>
+		<version>1.0-alpha-2</version>
+		<executions>
+		    <execution>
+			<phase>initialize</phase>
+			<goals>
+			    <goal>read-project-properties</goal>
+			</goals>
+			<configuration>
+			    <files>
+				<file>application.properties</file>
+			    </files>
+			</configuration>
+		    </execution>
+		</executions>
+	    </plugin>
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
@@ -71,25 +103,61 @@
 		</executions>
 	    </plugin>
 	    <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${output.directory}/lib</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <excludeArtifactIds>junit</excludeArtifactIds>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>	    
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-dependency-plugin</artifactId>
+		<executions>
+		    <execution>
+			<id>copy-dependencies</id>
+			<phase>compile</phase>
+			<goals>
+			    <goal>copy-dependencies</goal>
+			</goals>
+			<configuration>
+			    <outputDirectory>${output.directory}/lib</outputDirectory>
+			    <overWriteReleases>false</overWriteReleases>
+			    <overWriteSnapshots>false</overWriteSnapshots>
+			    <overWriteIfNewer>true</overWriteIfNewer>
+			    <excludeArtifactIds>junit</excludeArtifactIds>
+			</configuration>
+		    </execution>
+		</executions>
+	    </plugin>	   
+	    <plugin>
+		<groupId>com.google.code.maven-svn-revision-number-plugin</groupId>
+		<artifactId>maven-svn-revision-number-plugin</artifactId>
+		<version>1.7</version>
+		<executions>
+		    <execution>
+			<goals>
+			    <goal>revision</goal>
+			</goals>
+		    </execution>
+		</executions>
+		<configuration>
+		    <entries>
+			<entry>
+			    <path>${basedir}/src/main</path>
+			    <!-- this will populate "arbil.version.revision" -->
+			    <prefix>arbil.version</prefix>
+			</entry>
+		    </entries>
+		</configuration>
+	    </plugin>
+	    <plugin>
+		<groupId>com.keyboardsamurais.maven</groupId>
+		<artifactId>maven-timestamp-plugin</artifactId>
+		<configuration>
+		    <propertyName>arbil.build-date</propertyName>
+		    <timestampPattern>EEE MMM dd HH:mm:ss z yyyy</timestampPattern> //"Mon Jan 16 10:25:00 CET 2012";
+		</configuration>
+		<executions>
+		    <execution>
+			<goals>
+			    <goal>create</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin> 
 	</plugins>
     </build>
     <dependencies>	
@@ -155,11 +223,17 @@
 	    <artifactId>pluginloader</artifactId>
 	    <version>0.0.33672-stable</version>
 	</dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>arbil-help</artifactId>
-            <version>2.4.33563-testing</version>
-        </dependency>
+	<dependency>
+	    <groupId>${project.groupId}</groupId>
+	    <artifactId>arbil-help</artifactId>
+	    <version>2.4.33688-testing</version>
+	</dependency>
     </dependencies>
 
+    <pluginRepositories>
+	<pluginRepository>
+	    <id>maven-timestamp</id>
+	    <url>http://maven-timestamp-plugin.googlecode.com/svn/trunk/repository</url>
+	</pluginRepository>
+    </pluginRepositories>  
 </project>
