--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -3,7 +3,7 @@
 ####################################
 
 application.name=arbil
-
+application.packagePath=/nl/mpi/arbil
 application.mainClass=nl.mpi.arbil.ArbilMain
 
 # Target java version (e.g. 1.5+)
