Revision number comes from base dir, not src/main

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -143,7 +143,7 @@
                 <configuration>
                     <entries>
                         <entry>
-                            <path>${basedir}/src/main</path>
+                            <path>${basedir}</path>
                             <!-- this will populate "arbil.version.revision" -->
                             <prefix>arbil.version</prefix>
                         </entry>
