--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -6,9 +6,6 @@ application.name=arbil
 application.packagePath=/nl/mpi/arbil
 application.mainClass=nl.mpi.arbil.ArbilMain
 
-# Target java version (e.g. 1.5+)
-application.javaVersion=1.5+
-
 application.shortDescription=Arbil is an application for arranging research material and associated metadata into a format appropriate for archiving.
 application.longDescription=Arbil is an application for arranging research material and associated metadata into a format appropriate for archiving.  Arbil is designed so that it can be used off line in remote locations. The data can be entered at any stage in part or as a whole. When an internet connection is available the work can then be transferred to the main archive via Lamus.\
                             \
@@ -17,10 +14,20 @@ application.maintainer.name=Peter Withers
 application.maintainer.email=Peter.Withers@mpi.nl
 
 ####################################
+# Requirements
+####################################
+# heap size in megabytes
+application.initialHeapSize=256
+application.maxHeapSize=1024
+
+# Target java version (e.g. 1.5+)
+application.javaTargetVersion=1.5+
+# Minimal java version (e.g. 1.5.0)
+application.minimalJavaVersion=1.5.0
+
+####################################
 # Distribution
 ####################################
-application.jnlp.heapSize=1073741824
-
 application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg, imagemagick
 application.debian.section=science
 
