Excluded PHP files from maven-license-plugin configuration Refs #2413.

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -181,6 +181,7 @@
 		    <excludes>
 			<exclude>**/*.txt</exclude>
 			<exclude>**/*.icns</exclude>
+			<exclude>**/*.php</exclude>
 			<exclude>installer/**</exclude>
 			<exclude>src/main/resources/defaults/**</exclude>
 			<exclude>src/main/resources/nl/mpi/arbil/resources/xsl/**</exclude>
