Moved copyright property out of application.properties into POM. Added it as a property to version.properties, which gets read by ArbilVersion so that the about page can show the copyright year from the same source.

--- a/arbil/src/main/resources/nl/mpi/arbil/version.properties
+++ b/arbil/src/main/resources/nl/mpi/arbil/version.properties
@@ -26,3 +26,4 @@ application.compileDate=${arbil.build-date}
 application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-${arbil.branch}-current.txt
 application.branch=${arbil.branch}
 application.projectVersion=${project.version}
+application.license.copyrightYear=${arbil.license.copyrightYear}
