--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -16,7 +16,11 @@
     </parent> 
     
     <properties>
+	<!-- Title of the application as it should be shown run time, e.g. in window titles, error log and "About Arbil" dialog -->
 	<arbil.application-title>Arbil (pretesting)</arbil.application-title>
+	<!-- Year to show in copyright messages. Used in the 'About Arbil' dialog (via version.properties) and by maven-license-plugin (see below) -->
+	<arbil.license.copyrightYear>2012</arbil.license.copyrightYear>
+
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<output.jarname>${project.build.finalName}</output.jarname>
 	<output.directory>${project.build.directory}</output.directory>
@@ -176,7 +180,7 @@
 		    <header>${project.parent.basedir}/license-header.txt</header>
 		    <strictCheck>false</strictCheck>
 		    <properties>
-			<year>${application.license.copyrightYear}</year>
+			<year>${arbil.license.copyrightYear}</year>
 			<organization>${project.organization.name}</organization>
 		    </properties>
 		    <mapping>
